--- a/code/prep/preprocessing.ipynb
+++ b/code/prep/preprocessing.ipynb
@@ -4,33 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estrutura de funcionamento da estrutura dos projetos.\n",
+    "# Baixando série histórica de IPCA\n",
     "\n",
-    "./CODE\n",
-    "./code/prep Notebook/estudos. Códigos experimentais. Preprocessing lê arquivos de ./data/raw e grava em ./data/processed.\n",
-    "./code/model\n",
+    "Obtendo série histórica relativa à inflação (IPCA) na plataforma de dados abertos do BC, importando e transformando em um DataFrame do Pandas.\n",
     "\n",
-    "\n",
-    "./DATA\n",
-    "./data/raw:              Dados \"sujos\", com nulos, etc. O único acesso ao RAW é dado pelo \"Preprocessing\"\n",
-    "./data/processed:        Recebe os dados tratados de RAW. Os acessos a Processed podem vir de \"Analysis\" e \"Model\"\n",
-    "\n",
-    "\n",
-    "RAÍZ\n",
-    "./requirements.txt\n",
-    "./.env                   variáveis de ambiente \n",
-    "\n",
+    "URL: https://dadosabertos.bcb.gov.br/\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from decouple import config"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -38,10 +26,7 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Token_Twitter = config('TWITTER_TOKEN')\n",
-    "csvData = config('TWITTER_CODE')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
