--- a/code/prep/preprocessing.ipynb
+++ b/code/prep/preprocessing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baixando série histórica de IPCA\n",
+    "# Obtendo série histórica de IPCA\n",
     "\n",
     "Obtendo série histórica relativa à inflação (IPCA) na plataforma de dados abertos do BC, importando e transformando em um DataFrame do Pandas.\n",
     "URL: https://dadosabertos.bcb.gov.br/\n",
