update com arquivo .py

--- a/code/prep/preprocessing.ipynb
+++ b/code/prep/preprocessing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "'01/07/2022'"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,31 +117,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ipca(01/01/1992_a_01/07/2022).csv'"
+       "'ipca(01011992_a_01072022).csv'"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "nomeArquivo = nomeArquivo.replace('/', '_')\n",
     "nomeArquivo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe.to_csv('ipca.csv')"
+    "dataframe.to_csv(nomeArquivo)"
    ]
   }
  ],
